Fix  Bug 297157 - knotes reqires to save edited note twice

FIXED-IN: 4.11.3
BUG: 297157